src/components/backgroundLabels.module.css
.root {
    list-style: none;
    margin: 0;
    display: flex;
    flex-direction: row;
    font-size: 0.8rem;
}

.root li {
    margin: 0 8px;
}

.root li:first-child {
    margin-left: 0;
}

.root li a {
    cursor: pointer;
    text-decoration: none;
    color: rgba(255, 255, 255, 0.6);
}

.root li a:hover {
    color: white;
}

.currentLabel {
    background-color: rgba(255, 255, 255, 0.3);
    color: white;
    /* font-weight: bold; */
    padding: 0 8px;
}

